# qr-studio-ultra

./: .gitignore  .output.txt  CONTRIBUTING.md  LICENSE  QR-Studio-Ultra-Final.apk.idsig  README.md  USER_MANUAL.md  build_output.txt  keystore.properties.example  my-release-key.jks  package-lock.json  package.json  tauri_dev_output.txt  vite.config.js
App_Brand_Kit/: asset_directories.txt
_repo_audit_output/: repo_audit_report.json
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
src/: app.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte  +page.svelte.20260423-135902.bak  +page.svelte.bak
