[package]
name = "qr-studio-ultra"
version = "0.1.0"
description = "QR Studio Ultra Rust Edition"
authors = ["Paul Bess"]
edition = "2021"

[lib]
name = "qr_studio_ultra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-barcode-scanner = "2.0"
fast_qr = { version = "0.13", features = ["image"] }
image = "0.25"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
